[package]
name = "cont"
version = "0.1.0"
authors = ["cytolytic"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "a better linux 'cat' cli tool"

[dependencies]
syntect = { version = "4.2", default-features = false, features = ["default-fancy"]}
structopt = "0.3.21"
colored = "2.0.0"
libc = "0.2.80"